# game-of-life

./: Cargo.toml
src/: grid.rs  main.rs
